Final project 10. Commit 2. добавление актуальных зависимостей для 23 jdk